vlib/v/checker/tests/interface_return_parameter_err.out
vlib/v/checker/tests/interface_return_parameter_err.vv:2:5: error: unknown type `Baz`
    1 | interface Foo {
    2 |     bar(string) Baz
      |     ~~~~~~~~~~~
    3 |     bar2(Bax) string
    4 | }
vlib/v/checker/tests/interface_return_parameter_err.vv:3:10: error: unknown type `Bax`
    1 | interface Foo {
    2 |     bar(string) Baz
    3 |     bar2(Bax) string
      |          ~~~
    4 | }
